# adapter/src/main/java/tomaszewski/in/controller/ReviewController.java
@@ -1,0 +1,30 @@
+package tomaszewski.in.controller;
+
+
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+import tomaszewski.mapper.AttemptMapper;
+import tomaszewski.mapper.SelectedAnswerMapper;
+import tomaszewski.model.StartAttemptModel;
+import tomaszewski.openapi.api.ReviewApi;
+import tomaszewski.openapi.model.StartAttemptDTO;
+import tomaszewski.openapi.model.StartAttemptResponseDTO;
+import tomaszewski.security.UserSecurityDetails;
+import tomaszewski.usecase.AttemptUseCase;
+
+@RestController
+@RequiredArgsConstructor
+public class ReviewController implements ReviewApi {
+
+    private final AttemptUseCase attemptUseCase;
+    private final AttemptMapper attemptMapper;
+    private final SelectedAnswerMapper selectedAnswerMapper;
+
+    @Override
+    public ResponseEntity<StartAttemptResponseDTO> startReview(StartAttemptDTO startAttemptDTO, UserSecurityDetails userSecurityDetails) {
+        StartAttemptModel startAttemptModel = attemptMapper.toStartAttemptModel(startAttemptDTO, userSecurityDetails.getId());
+        StartAttemptModel startAttempt = attemptUseCase.startReview(startAttemptModel);
+        return ResponseEntity.ok(attemptMapper.toStartAttemptResponseDTO(startAttempt));
+    }
+}
